[gd_scene load_steps=14 format=3 uid="uid://cwuusdypv22c7"]

[ext_resource type="PackedScene" uid="uid://btxjok7j5ueg1" path="res://models/mercedes_s500.blend" id="1_5isg3"]
[ext_resource type="Script" path="res://src/vehicles/mercedes_s_500.gd" id="1_c52wh"]
[ext_resource type="PackedScene" uid="uid://du3v2w0j6w6rl" path="res://models/mercedes_s500_wheel.blend" id="3_1xj8t"]
[ext_resource type="Script" path="res://src/vehicles/Camera3DMercedesS500.gd" id="3_r1sdc"]
[ext_resource type="Material" uid="uid://bf6sv5phphcwo" path="res://materials/mercedes_s500/wheel/0.8 R 0.001.tres" id="4_dehuc"]
[ext_resource type="Material" uid="uid://c1w2ktw8kgs74" path="res://materials/mercedes_s500/wheel/0.8 R 0.004.tres" id="5_w60tw"]
[ext_resource type="Material" uid="uid://mor0ooqbuvnu" path="res://materials/mercedes_s500/wheel/0.2 R 0.003.tres" id="6_42kyd"]

[sub_resource type="BoxShape3D" id="BoxShape3D_5bq06"]
size = Vector3(2.6306, 1, 1.27855)

[sub_resource type="BoxShape3D" id="BoxShape3D_mq3bn"]
size = Vector3(1.8386, 0.830325, 4.94357)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_t41v0"]
radius = 0.696363
height = 2.76024

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_xv4lx"]
radius = 0.458764

[sub_resource type="BoxShape3D" id="BoxShape3D_hgnuv"]
size = Vector3(0.735279, 1, 1.61616)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ue8sb"]
radius = 0.330791
height = 1.51857

[node name="MercedesS500" type="VehicleBody3D"]
mass = 2000.0
center_of_mass_mode = 1
center_of_mass = Vector3(0, 0.45, -0.9)
script = ExtResource("1_c52wh")

[node name="mercedes_s500" parent="." instance=ExtResource("1_5isg3")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="VehicleWheel3DMercedesS500FrontLeft" type="VehicleWheel3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.05425, 0.404054, -2.08728)
use_as_traction = true
use_as_steering = true
wheel_radius = 0.4
wheel_rest_length = 0.05
suspension_travel = 0.1
suspension_stiffness = 140.0
suspension_max_force = 10000.0
damping_compression = 0.7
damping_relaxation = 0.9

[node name="mercedes_s500_wheel" parent="VehicleWheel3DMercedesS500FrontLeft" instance=ExtResource("3_1xj8t")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.128201, -0.393451, 0)

[node name="B3D Mercedes S500 V2_001" parent="VehicleWheel3DMercedesS500FrontLeft/mercedes_s500_wheel" index="0"]
surface_material_override/0 = ExtResource("4_dehuc")
surface_material_override/1 = ExtResource("5_w60tw")
surface_material_override/2 = ExtResource("6_42kyd")

[node name="VehicleWheel3DMercedesS500FrontRight" type="VehicleWheel3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.03768, 0.405501, -2.0856)
use_as_traction = true
use_as_steering = true
wheel_radius = 0.4
wheel_rest_length = 0.05
suspension_travel = 0.1
suspension_stiffness = 140.0
suspension_max_force = 10000.0
damping_compression = 0.7
damping_relaxation = 0.9

[node name="mercedes_s500_wheel" parent="VehicleWheel3DMercedesS500FrontRight" instance=ExtResource("3_1xj8t")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.132038, -0.39969, 0)

[node name="VehicleWheel3DMercedesS500RearLeft" type="VehicleWheel3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.05408, 0.405637, 1.32036)
wheel_radius = 0.4
wheel_rest_length = 0.05
suspension_travel = 0.1
suspension_stiffness = 60.0
suspension_max_force = 10000.0
damping_compression = 0.7
damping_relaxation = 0.9

[node name="mercedes_s500_wheel" parent="VehicleWheel3DMercedesS500RearLeft" instance=ExtResource("3_1xj8t")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.139904, -0.395685, 0)

[node name="VehicleWheel3DMercedesS500RearRight" type="VehicleWheel3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.01682, 0.406324, 1.3206)
wheel_radius = 0.4
wheel_rest_length = 0.05
suspension_travel = 0.1
suspension_stiffness = 60.0
suspension_max_force = 10000.0
damping_compression = 0.7
damping_relaxation = 0.9

[node name="mercedes_s500_wheel" parent="VehicleWheel3DMercedesS500RearRight" instance=ExtResource("3_1xj8t")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.136657, -0.396207, 0)

[node name="Camera3DMercedesS500" type="Camera3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.425756, 1.91072, -0.338569)
script = ExtResource("3_r1sdc")

[node name="Area3DEnter" type="Area3D" parent="."]

[node name="CollisionShape3D2" type="CollisionShape3D" parent="Area3DEnter"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.904907, -0.578058)
shape = SubResource("BoxShape3D_5bq06")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.739281, -0.158864)
shape = SubResource("BoxShape3D_mq3bn")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, -0.385608, 0.979656, 0.281157)
shape = SubResource("CapsuleShape3D_t41v0")

[node name="CollisionShape3D3" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0.362546, 0.979656, 0.281157)
shape = SubResource("CapsuleShape3D_t41v0")

[node name="CollisionShape3D4" type="CollisionShape3D" parent="."]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0.690565, -2.61903)
shape = SubResource("CapsuleShape3D_xv4lx")

[node name="CollisionShape3D5" type="CollisionShape3D" parent="."]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0.792871, 2.22515)
shape = SubResource("CapsuleShape3D_xv4lx")

[node name="CollisionShape3D6" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.16639, 0.240227)
shape = SubResource("BoxShape3D_hgnuv")

[node name="Area3DExitLeft" type="Area3D" parent="."]

[node name="CollisionShape3DExitLeft" type="CollisionShape3D" parent="Area3DExitLeft"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.65681, 1.04387, -0.406693)
shape = SubResource("CapsuleShape3D_ue8sb")

[node name="Area3DExitRight" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.82648, 0, 0)

[node name="CollisionShape3DExitRight" type="CollisionShape3D" parent="Area3DExitRight"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.17795, 1.04144, -0.406693)
shape = SubResource("CapsuleShape3D_ue8sb")

[connection signal="body_entered" from="Area3DEnter" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3DEnter" to="." method="_on_area_3d_body_exited"]
[connection signal="body_entered" from="Area3DExitLeft" to="." method="_on_area_3d_exit_left_body_entered"]
[connection signal="body_exited" from="Area3DExitLeft" to="." method="_on_area_3d_exit_left_body_exited"]
[connection signal="body_entered" from="Area3DExitRight" to="." method="_on_area_3d_exit_right_body_entered"]
[connection signal="body_exited" from="Area3DExitRight" to="." method="_on_area_3d_exit_right_body_exited"]

[editable path="mercedes_s500"]
[editable path="VehicleWheel3DMercedesS500FrontLeft/mercedes_s500_wheel"]
[editable path="VehicleWheel3DMercedesS500FrontRight/mercedes_s500_wheel"]
